fixed spacing

--- a/src/app/projects/lectureRapide/lecture.module.scss
+++ b/src/app/projects/lectureRapide/lecture.module.scss
@@ -161,6 +161,9 @@
           .logos {
             justify-content: space-around;
             padding-right: 0rem;
+            .logo2 {
+              margin-left: 3rem;
+            }
             img {
               width: 13vw;
               height: auto;
